Script/10clustor-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ushipwpbywebops-clustorip-svc
  labels: 
    app: mywpapp-webops  #Has to be same what's labelled in deployment YAML
spec:
  type: ClusterIP 
  selector:
    app: mywpapp-webops  #Has to be same what's labelled in deployment YAML
  ports: 
    - port: 80        #Service Port
      targetPort: 80     #Container Port defined in Deployment YAML
